# st.muk___-erp__system

./: .gitignore  README.md  cb118d26-6046-4d4e-b04a-37ce15698e03_Pasted_Text_1766577644875.txt  chat-Analysis of College Management System Plan.txt  information
Documentation/: 01_Product_Vision_Strategy.md  03_PRD_Master.md  08_Sprint_Plan_Roadmap.md  09_Sprint_Plan_Phase1_v2.md  12_FRD_UI_UX_Spec_Phase1.md  README.md
backend/: Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2025_01_01_0000-001_initial_migration.py  4a9f8b2c1d3e_add_launch_modules_library_chat_audit.py
backend/app/: main.py
backend/app/api/v1/: health.py  router.py
backend/app/api/v1/endpoints/: auth.py  institutions.py  users.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging_config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  user.py
backend/app/modules/attendance/: routes.py  services.py
backend/app/modules/chat/: __init__.py  models.py  routes.py  schemas.py  services.py
backend/app/modules/finance/: models.py  services.py
backend/app/modules/student/: __init__.py  models.py  routes.py  schemas.py  services.py
backend/app/schemas/: __init__.py  user.py
backend/scripts/: create_all_sprints.py  generate_sprints.sh  seed.py  seed_launch_data.py
development/: README.md  api_contracts.md  database_migrations_plan.md  development_plan.md  text_wireframes.md
docs/: 02_Indian_Education_System_Research.md  03_PRD_Master.md  04_FRD_Modules.md  05_FRD_LMS_Assessment.md  06_FRD_Attendance_Compliance.md  07_FRD_Student_Progression.md  08_FRD_Finance_Scheduling_Attendance.md  10_FRD_Security_AntiFraud.md  11_FRD_Data_Integrity_Scope.md  13_API_Design_Spec.md  14_DevOps_Workflow.md  15_Readiness_Checklist.md  API_Service_Layer_Planning.md  ATKT_Backlog_Rules.md  (+19 more)
(+1 files in other folders)
