[tool.poetry]
name = "educore-backend"
version = "0.1.0"
description = "EduCore ERP Backend - Indian Education Management System"
authors = ["EduCore Team <team@educore.in>"]
license = "Proprietary"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.4"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
celery = "^5.3.6"
flower = "^2.0.1"
minio = "^7.2.7"
httpx = "^0.27.0"
pillow = "^10.3.0"
reportlab = "^4.2.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
phonenumbers = "^8.13.37"
python-dateutil = "^2.9.0"
tenacity = "^8.2.3"
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"
